@@ -36,8 +36,7 @@ ENTRY_END
 STEP 4 CHECK_ANSWER
 ENTRY_BEGIN
 	MATCH all 
-	; first reply, have AA set.
-	REPLY QR AA RD RA
+	REPLY QR RD RA
 	SECTION QUESTION
 	www.example.com. IN A
 	SECTION ANSWER
@@ -83,8 +82,7 @@ ENTRY_END
 STEP 9 CHECK_ANSWER
 ENTRY_BEGIN
 	MATCH all 
-	; first reply, have AA set.
-	REPLY QR AA RD RA
+	REPLY QR RD RA
 	SECTION QUESTION
 	bla.example.com. IN A
 	SECTION ANSWER
